# go-mircosvc

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  a.bzl  bazel-bin  bazel-blog-svr  bazel-blog-svr1  bazel-go-mircosvc  bazel-out  bazel-testlogs  docker-compose.yaml  docker-compose.yml  docker.bzl  go.mod  go.sum  load.bzl  pid  repos.bzl
common/: BUILD.bazel  const.go  decode.go  encode.go  error.go  serverOpt.go  type.go
config/: config.go  config.yml  mode.go
db/: mysql.go  redis.go
db/mysql/: insert.go  mysql.go
db/redis/: redis.go
deployments/docker/: Dockerfile  Dockerfile.debug  Dockerfile.debugbuilder  Dockerfile.dev  docker-compose-debug.yaml  docker-compose-dev.yaml  docker-compose-dev.yml  docker-compose.yaml
deployments/docker/fluentd/: Dockerfile
deployments/docker/fluentd/conf/: fluent.conf
deployments/docker/prometheus/: prometheus.yml
deployments/docker/ssl/: localhost+3-key.pem  localhost+3.pem
gateway/: config.yml
gateway/cmd/: main.go
gateway/config/: config.go
gateway/etcd/: etcd.go
gateway/logger/: logger.go
gateway/middleware/: auth.go  jwt.go
gateway/pb/user/: user.proto
gateway/router/: router.go  transport.go
gateway/server/: server.go
gateway/transport/: factory.go  transport.go
greeter/: Dockerfile  Makefile
greeter/cmd/: main.go
greeter/router/: router.go  user.go
pb/: compile.sh
pb/article/: BUILD.bazel  article.pb.go  article.proto
pb/book/: compile.sh
pb/user/: BUILD.bazel  compile.sh  user.pb.go  user.proto
prometheus/: docker-compose.yml  prometheus.yml
servers/article/cmd/: BUILD.bazel  main.go
servers/article/config/: BUILD.bazel  config.go
servers/article/endpoints/: BUILD.bazel  endpoints.go  service.go
servers/article/transport/: BUILD.bazel  decode.go  encode.go  grpcCli.go  grpcSvc.go  transport.go
servers/demo/cmd/: main.go
servers/demo/endpoint/: endpoint.go  middleware.go
servers/demo/entity/: entity.go
servers/demo/http/: http.go
servers/demo/service/: middleware.go  service.go
servers/gateway/cmd/: BUILD.bazel  main.go
servers/gateway/config/: BUILD.bazel  config.go
servers/gateway/transport/: BUILD.bazel  factory.go  transport.go
servers/lorem-etcd/: register.go
servers/lorem-etcd/client/: main.go
servers/lorem-etcd/etcd-sample/: common.go  worker.go
servers/lorem-etcd/etcd-sample/client/: main.go
servers/lorem-etcd/etcd-sample/server/: main.go
servers/lorem-etcd/server/: main.go
servers/user/: config.yml
servers/user/cmd/: main.go
servers/user/config/: config.go
servers/user/etcd/: etcd.go
servers/user/logger/: logger.go
servers/user/middleware/: middleware.go
servers/user/model/: user.go
servers/user/proto/api/: api.micro.go
servers/user/proto/user/: api.pb.go  build.sh  user.micro.go  user.pb.go  user.proto
servers/user/server/: server.go
servers/user/service/: decode.go  encode.go  endpoint.go  request.go  service.go  transport.go
servers/user/service/model/: user.go
servers/user/transport/: decode.go  encode.go  grpc.go  transport.go
servers/usersvc/: config.yml
servers/usersvc/cmd/: BUILD.bazel  main.go
servers/usersvc/config/: BUILD.bazel  config.go
servers/usersvc/endpoint/: endpoint.go  request.go
servers/usersvc/endpoints/: BUILD.bazel  endpoints.go  request.go  response.go  service.go
servers/usersvc/endpoints/model/: BUILD.bazel  user.go
servers/usersvc/middleware/: BUILD.bazel  middleware.go  prometheus.go
servers/usersvc/service/: endpoint.go  service.go
servers/usersvc/transport/: BUILD.bazel  decode.go  encode.go  grpc.go  grpcCli.go  grpcSvc.go  transport.go
services/db/: mysql.go
services/server/: server.go
services/session/: session.go
services/validator/: equal.go  range.go  util.go  validator.go  validators.go
shared/db/: BUILD.bazel  mysql.go  redis.go
shared/email/: BUILD.bazel  email.go
shared/etcd/: BUILD.bazel  etcd.go
shared/logger/: BUILD.bazel  logger.go
shared/middleware/: BUILD.bazel  cookie.go  logger.go  permission.go  ratelimit.go
shared/server/: server.go
shared/session/: BUILD.bazel  session.go
shared/token/: BUILD.bazel  token.go
shared/validator/: BUILD.bazel  range.go
shared/zipkin/: BUILD.bazel  zipkin.go
sql/: db.sql
test/: BUILD.bazel  main.go
utils/: BUILD.bazel  const.go  date.go  file.go  json.go  math.go  reflect.go  response.go  string.go  token.go  uuid.go
