load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_pull")

# gazelle:prefix github.com/kum0/go-mircosvc
gazelle(
    name = "gazelle",
    prefix = "github.com/kum0/go-mircosvc",
)

gateway = "//servers/gateway/cmd:gateway"

usersvc = "//servers/usersvc/cmd:usersvc"

alias(
    name = "gateway",
    actual = gateway,
)

alias(
    name = "usersvc",
    actual = usersvc,
)

alias(
    name = "usersvc_img",
    actual = "//servers/gateway/cmd:gateway_push",
)
