load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/kum0/go-mircosvc
gazelle(
    name = "gazelle",
    prefix = "github.com/kum0/go-mircosvc",
)

alias(
    name = "gateway_app",
    actual = "//servers/gateway/cmd:gateway_app",
)

alias(
    name = "gateway_image",
    actual = "//servers/gateway/cmd:gateway_image",
)

alias(
    name = "gateway_push",
    actual = "//servers/gateway/cmd:gateway_push",
)

# load(":test.bzl", "build")


# build(
#     name = "b",
#     target = ["//servers/gateway/cmd:gateway_app"],
# )
