load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "date.go",
        "file.go",
        "json.go",
        "math.go",
        "reflect.go",
        "string.go",
        "uuid.go",
    ],
    importpath = "github.com/kum0/go-mircosvc/utils",
    visibility = ["//visibility:public"],
)
