load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mysql.go",
        "redis.go",
    ],
    importpath = "github.com/kum0/go-mircosvc/shared/db",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_gomodule_redigo//redis:go_default_library",
    ],
)
