load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["session.go"],
    importpath = "github.com/kum0/go-mircosvc/shared/session",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gomodule_redigo//redis:go_default_library"],
)
