load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "equal.go",
        "range.go",
        "util.go",
        "validator.go",
        "validators.go",
    ],
    importpath = "github.com/kum0/go-mircosvc/shared/validator",
    visibility = ["//visibility:public"],
)
