load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["zipkin.go"],
    importpath = "github.com/kum0/go-mircosvc/shared/zipkin",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_openzipkin_zipkin_go//:go_default_library",
        "@com_github_openzipkin_zipkin_go//reporter:go_default_library",
        "@com_github_openzipkin_zipkin_go//reporter/http:go_default_library",
    ],
)
