load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kum0/go-mircosvc/servers/gateway/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//servers/gateway/config:go_default_library",
        "//servers/gateway/transport:go_default_library",
        "//shared/db:go_default_library",
        "//shared/etcd:go_default_library",
        "//shared/logger:go_default_library",
        "//shared/session:go_default_library",
        "//shared/zipkin:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//log/level:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_openzipkin_contrib_zipkin_go_opentracing//:go_default_library",
    ],
)

go_binary(
    name = "gateway",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
