load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["transport.go"],
    importpath = "github.com/kum0/go-mircosvc/servers/gateway/transport",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//servers/usersvc/endpoints:go_default_library",
        "//servers/usersvc/transport:go_default_library",
        "//shared/etcd:go_default_library",
        "//shared/middleware:go_default_library",
        "//shared/session:go_default_library",
        "@com_github_go_kit_kit//endpoint:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//sd:go_default_library",
        "@com_github_go_kit_kit//sd/etcdv3:go_default_library",
        "@com_github_go_kit_kit//sd/lb:go_default_library",
        "@com_github_go_kit_kit//tracing/zipkin:go_default_library",
        "@com_github_go_kit_kit//transport/http:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_openzipkin_zipkin_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
