load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "decode.go",
        "encode.go",
        "grpcCli.go",
        "grpcSvc.go",
        "transport.go",
    ],
    importpath = "github.com/kum0/go-mircosvc/servers/usersvc/transport",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//pb/user:go_default_library",
        "//servers/usersvc/endpoints:go_default_library",
        "@com_github_go_kit_kit//endpoint:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//ratelimit:go_default_library",
        "@com_github_go_kit_kit//tracing/opentracing:go_default_library",
        "@com_github_go_kit_kit//tracing/zipkin:go_default_library",
        "@com_github_go_kit_kit//transport/grpc:go_default_library",
        "@com_github_go_kit_kit//transport/http:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_opentracing_opentracing_go//:go_default_library",
        "@com_github_openzipkin_zipkin_go//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_time//rate:go_default_library",
    ],
)
